@@ -174,7 +174,7 @@ public class ImportController extends BaseController<BaseCraft, IBaseCraftServic
                             BeanUtils.copyProperties(e, busiPo);
                             busiPo.setQuery01("YP");
                             busiPo.setNum02(busiPo.getNum01());
-                            busiPo.setNum03(new Double(0));
+                            busiPo.setNum03(Double.valueOf(0));
                             busiPo.setQuery04(code);
                             busiPo.setQuery02("计划中");
                             String serial = busiPo.getQuery04()+ "-" +(index*10);
